# ethos

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  justfile  manifest.toml
.github/workflows/: ci.yml  cron-weekly-rustfmt.yml  lint.yml  prek.yml
adapters/: Cargo.toml
adapters/src/: adapter_facade.rs  conversion_helpers.rs  lib.rs  normalization_registry.rs  protocol_adapter.rs  rpc_adapter.rs
adapters/src/bitcoin_core/: openrpc.rs  schema.rs  types.rs
adapters/src/core_lightning/: rpc_client.rs  types.rs
adapters/src/lnd/: rpc_client.rs  types.rs
adapters/src/rust_lightning/: mod.rs
adapters/templates/: rpc_client.rs
adapters/templates/bitcoin_core/: client_trait.rs  config.rs  lib.rs  test_config.rs
adapters/templates/core_lightning/: client_trait.rs  config.rs  lib.rs  test_config.rs
backends/codegen/: Cargo.toml
backends/codegen/src/: lib.rs
backends/http/: Cargo.toml
backends/http/src/: lib.rs
cli/orchestrator/: Cargo.toml
cli/orchestrator/src/: lib.rs  main.rs
compiler/analysis/: Cargo.toml
compiler/analysis/src/: canonicalizer.rs  differential.rs  lib.rs  normalizer.rs  semantic.rs  validator.rs
compiler/analysis/tests/: test_canonicalizer.rs  test_differential.rs  test_validator.rs
compiler/codegen/: Cargo.toml
compiler/codegen/resources/adapters/normalization/: bitcoin.json
compiler/codegen/src/: lib.rs  namespace_scaffolder.rs  transport_infrastructure_generator.rs  utils.rs
compiler/codegen/src/generators/: bitcoin_core_versioned.rs  client_trait.rs  core_lightning_versioned.rs  doc_comment.rs  fee_rate_utils.rs  mod.rs  node_manager.rs  version_specific_client_trait.rs  version_specific_response_type.rs  version_transitions.rs  versioned_generator.rs  versioned_registry.rs
compiler/codegen/src/generators/test_node/: mod.rs  utils.rs
compiler/codegen/templates/bitcoin_core/: client_trait.rs
compiler/config/: Cargo.toml
compiler/config/src/: lib.rs
compiler/fuzz/: Cargo.toml  Dockerfile.fuzz  core-lightning-config  docker-compose.yml  justfile
compiler/fuzz/fuzz/: Cargo.toml
compiler/fuzz/src/: corpus_manager.rs  deterministic_rng.rs  lib.rs  observability.rs
compiler/fuzzctl/: Cargo.toml
compiler/fuzzctl/src/: main.rs
compiler/fuzzctl/tests/: integration.rs  logs_and_collect.rs
compiler/logging/: Cargo.toml
compiler/logging/src/: lib.rs
compiler/pipeline/: Cargo.toml
compiler/pipeline/src/: cargo_dependencies.rs  codegen_orchestration.rs  feature_aware_cargo.rs  feature_aware_mod.rs  generation_context.rs  lib.rs  main.rs  orchestration.rs  path_utils.rs  project_setup.rs  protocol_compiler.rs  template_management.rs
compiler/pipeline/src/module_generators/: client_trait.rs  lib_rs.rs  mod.rs  node_manager.rs  response_types.rs  test_node.rs  transport.rs
compiler/pipeline/templates/: rpc_client.rs
compiler/semantics/: Cargo.toml
compiler/semantics/src/: lib.rs  method_categorization.rs
compiler/semantics/tests/: test_lib.rs
docs/: architecture.mmd  semantic-convergence.md
githooks/: pre-commit
primitives/fuzz/: Cargo.toml
primitives/fuzz/src/: lib.rs
primitives/ir/: Cargo.toml
primitives/ir/src/: lib.rs  protocol_ir.rs  test_utils.rs
primitives/ir/tests/: roundtrip.rs  test_protocol_ir.rs  test_roundtrip.rs
primitives/normalization/: Cargo.toml
primitives/normalization/src/: lib.rs
primitives/path/: Cargo.toml
primitives/path/src/: lib.rs  path_utils.rs
primitives/plugins/: Cargo.toml
primitives/plugins/src/: lib.rs
primitives/registry/: Cargo.toml
primitives/registry/src/: ir_resolver.rs  lib.rs  type_alias_registry.rs
primitives/registry/tests/: test_lib.rs  test_promotion_map.json  test_type_alias_registry.rs
primitives/transport/: Cargo.toml
primitives/transport/src/: lib.rs
primitives/transport/tests/: integration_transport.rs
primitives/types/: Cargo.toml
primitives/types/src/: errors.rs  implementation.rs  lib.rs  node_metadata.rs  type_adapter.rs  version.rs
primitives/types/src/adapters/: bitcoin_core.rs  bitcoin_core_utils.rs  core_lightning.rs  mod.rs
primitives/types/tests/: test_lib.rs
primitives/types/tests/adapters/: test_bitcoin_core.rs  test_core_lightning.rs
resources/adapters/: registry.json
resources/adapters/normalization/: bitcoin.json  lightning.json
resources/ir/: bitcoin.ir.json  lightning.ir.json  openrpc.json  schema.json
rust-lightning-harness/: Cargo.toml  Dockerfile
rust-lightning-harness/src/: main.rs
src/: lib.rs
tests/e2e/: Cargo.toml  bitcoin.conf
tests/e2e/src/: bitcoin_core.rs  core_lightning.rs  main.rs
