[workspace]
members = [
    "adapters",
    "backends/codegen",
    "backends/http",
    "cli/orchestrator",
    "compiler/analysis",
    "compiler/codegen",
    "compiler/config",
    "compiler/fuzzctl",
    "compiler/logging",
    "compiler/pipeline",
    "compiler/semantics",
    "primitives/*",
]
resolver = "2"

[workspace.package]
description = "Ethos — A meta-compiler for the Bitcoin ecosystem"
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
bitcoin = { version = "0.32.7", features = ["serde"] }
