[package]
name = "ethos-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
bitcoin = { workspace = true }
futures = "0.3"
fuzz-types = { package = "ethos-fuzz-types", version = "0.1.0", path = "../primitives/fuzz" }
ir = { package = "ethos-ir", version = "0.1.0", path = "../primitives/ir" }
plugins = { package = "ethos-plugins", version = "0.1.0", path = "../primitives/plugins" }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time", "test-util", "macros"] }
types = { package = "ethos-types", version = "0.1.0", path = "../primitives/types" }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
serial_test = "3.2.0"

[features]
default = ["bitcoin-core", "core-lightning", "lnd", "rust-lightning", "runtime-backend"]
bitcoin-core = []
core-lightning = []
lnd = []
rust-lightning = []
offline-ir = []
runtime-backend = []
inproc-adapter = []
streaming = []
