[package]
name = "ethos-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
bitcoin = { version = "0.32.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
fuzz-types = { package = "ethos-fuzz-types", version = "0.1.0", path = "../primitives/fuzz" }
ir = { package = "ethos-ir", version = "0.1.0", path = "../primitives/ir" }
path = { package = "ethos-path", version = "0.1.0", path = "../primitives/path" }
semantics = { package = "ethos-semantics", version = "0.1.0", path = "../compiler/semantics" }
plugins = { package = "ethos-plugins", version = "0.1.0", path = "../primitives/plugins" }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "time", "test-util", "macros"] }
types = { package = "ethos-types", version = "0.1.0", path = "../primitives/types" }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
serial_test = "^3.1"

[[bin]]
name = "process_bitcoin_schema"
path = "src/bitcoin_core/schema.rs"

[features]
default = ["bitcoin-core", "runtime-backend"]
bitcoin-core = []
offline-ir = []
runtime-backend = []
inproc-adapter = []
streaming = []
