[package]
name = "ethos-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
bitcoin = { version = "0.32.8", features = ["serde"] }
bitcoin-units = { version = "0.3.0", features = ["serde"] }
futures = "0.3"
fuzz-types = { package = "ethos-fuzz-types", version = "0.1.0", path = "../primitives/fuzz" }
ir = { package = "ethos-ir", version = "0.1.0", path = "../primitives/ir" }
normalization = { package = "ethos-normalization", version = "0.1.0", path = "../primitives/normalization" }
path = { package = "ethos-path", version = "0.1.0", path = "../primitives/path" }
semantics = { package = "ethos-semantics", version = "0.1.0", path = "../compiler/semantics" }
plugins = { package = "ethos-plugins", version = "0.1.0", path = "../primitives/plugins" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
types = { package = "ethos-types", version = "0.1.0", path = "../primitives/types" }

[[bin]]
name = "process_bitcoin_openrpc"
path = "src/bin/process_bitcoin_openrpc.rs"

[features]
default = ["bitcoin-core", "runtime-backend"]
bitcoin-core = []
offline-ir = []
runtime-backend = []
inproc-adapter = []
streaming = []
