[package]
name = "rust-lightning-harness"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "rust-lightning-harness"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
warp = { version = "0.4.2", features = ["server"] }
