[package]
name = "ethos-http"
version = "0.1.0"
edition = "2021"
description = "HTTP transport backend for Ethos"
authors = ["Ethos Compiler Developers"]
keywords = ["bitcoin", "rpc", "codegen", "integration-testing"]
categories = ["cryptography", "data-structures", "api-bindings"]
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1.89"
logging = { package = "ethos-logging", version = "0.1.0", path = "../../compiler/logging" }
transport = { package = "ethos-transport", version = "0.1.0", path = "../../primitives/transport" }
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"] }
serde_json = "1.0.145"
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
