[package]
name = "ethos-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ethos-compiler"
path = "src/main.rs"

[dependencies]
adapters = { package = "ethos-adapters", version = "0.1.0", path = "../../adapters" }
analysis = { package = "ethos-analysis", version = "0.1.0", path = "../../compiler/analysis" }
codegen = { package = "ethos-codegen", version = "0.1.0", path = "../../compiler/codegen" }
codegen-backend = { package = "ethos-backend-codegen", version = "0.1.0", path = "../../backends/codegen" }
ir = { package = "ethos-ir", version = "0.1.0", path = "../../primitives/ir" }
path = { package = "ethos-path", version = "0.1.0", path = "../../primitives/path" }
pipeline = { package = "ethos-pipeline", version = "0.1.0", path = "../../compiler/pipeline" }
registry = { package = "ethos-registry", version = "0.1.0", path = "../../primitives/registry" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros"] }
types = { package = "ethos-types", version = "0.1.0", path = "../../primitives/types" }
