[package]
name = "ethos-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
codegen = { package = "ethos-codegen", version = "0.1.0", path = "../codegen" }
semantics = { package = "ethos-semantics", version = "0.1.0", path = "../semantics" }
fuzz-types = { package = "ethos-fuzz-types", version = "0.1.0", path = "../../primitives/fuzz" }
futures = "0.3"
ir = { package = "ethos-ir", version = "0.1.0", path = "../../primitives/ir" }
registry = { package = "ethos-registry", version = "0.1.0", path = "../../primitives/registry" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
types = { package = "ethos-types", version = "0.1.0", path = "../../primitives/types" }
