[package]
name = "ethos-codegen"
version = "0.1.0"
license = "CC0-1.0"
edition = "2021"

[dependencies]
adapters = { package = "ethos-adapters", version = "0.1.0", path = "../../adapters" }
ir = { package = "ethos-ir", version = "0.1.0", path = "../../primitives/ir" }
path = { package = "ethos-path", version = "0.1.0", path = "../../primitives/path" }
semantics = { package = "ethos-semantics", version = "0.1.0", path = "../semantics" }
regex = "1.10"
registry = { package = "ethos-registry", version = "0.1.0", path = "../../primitives/registry" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
types = { package = "ethos-types", version = "0.1.0", path = "../../primitives/types" }

[dev-dependencies]
tempfile = "3.5.0"
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros"] }
