[package]
name = "ethos-fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
ctor = "0.6.0"
# Local ethos dependencies
ethos-adapters = { path = "../../adapters" }
ethos-analysis = { path = "../analysis" }
fuzz-types = { package = "ethos-fuzz-types", path = "../../primitives/fuzz" }
rand = "0.9.2"
rand_chacha = "0.9.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
types = { package = "ethos-types", path = "../../primitives/types" }


[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "rpc"
path = "fuzz_targets/rpc.rs"

[[bin]]
name = "schema"
path = "fuzz_targets/schema.rs"

[[bin]]
name = "transport"
path = "fuzz_targets/transport.rs"

[[bin]]
name = "unified"
path = "fuzz_targets/unified.rs"
