[package]
name = "ethos-fuzzctl"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5"
which = "8.0.0"

[features]
default = ["signals"]
signals = ["ctrlc"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
