[package]
name = "ethos-pipeline"
version = "0.1.0"
license = "CC0-1.0"
edition = "2021"
default-run = "pipeline"

[features]
external_fuzz = []

[dependencies]
adapters = { package = "ethos-adapters", version = "0.1.0", path = "../../adapters" }
analysis = { package = "ethos-analysis", version = "0.1.0", path = "../analysis" }
chrono = { version = "0.4", features = ["serde"] }
codegen = { package = "ethos-codegen", version = "0.1.0", path = "../codegen" }
ir = { package = "ethos-ir", version = "0.1.0", path = "../../primitives/ir" }
path = { package = "ethos-path", version = "0.1.0", path = "../../primitives/path" }
pathdiff = "0.2"
plugins = { package = "ethos-plugins", version = "0.1.0", path = "../../primitives/plugins" }
regex = "1.0"
registry = { package = "ethos-registry", version = "0.1.0", path = "../../primitives/registry" }
semantics = { package = "ethos-semantics", version = "0.1.0", path = "../semantics" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
types = { package = "ethos-types", version = "0.1.0", path = "../../primitives/types" }
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3.23.0"

[lib]
name = "pipeline"
path = "src/lib.rs"

[[bin]]
name = "pipeline"
path = "src/main.rs"
