[package]
edition = "2021"
name = "ethos-transport"
version = "0.1.0"

[lib]
name = "transport"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
