[package]
name = "ethos-types"
version = "0.1.0"
edition = "2021"

[lib]
name = "types"
path = "src/lib.rs"

[dependencies]
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
ir = { package = "ethos-ir", version = "0.1.0", path = "../ir" }

[[test]]
name = "test_bitcoin_core"
path = "tests/adapters/test_bitcoin_core.rs"

[[test]]
name = "test_core_lightning"
path = "tests/adapters/test_core_lightning.rs"