# E2E Integration Tests for Ethos
#
# This package contains end-to-end tests that verify the generated client crates
# work correctly with actual Bitcoin Core and Core Lightning nodes.
#
# IMPORTANT: This package is excluded from the main workspace to avoid circular
# dependencies. The generated client crates it depends on don't exist until
# codegen runs, which would prevent 'cargo build' from working.
#
# Workflow:
#   1. Run 'just generate' to create the required client artifacts
#   2. Run 'just e2e' to build and test this package
#   3. Run 'just ethos' to run 'just generate' and 'just e2e'

[package]
name = "ethos-tests"
version = "0.1.0"
edition = "2021"

# Explicitly exclude from workspace to avoid circular dependencies
[workspace]

[dependencies]
anyhow = "1.0.100"
bitcoin = "0.32.8"
bitcoin-core-client-rpc-30-0-0 = { path = "../../outputs/generated/bitcoin-core-client-rpc-30-0-0" }
core-lightning-client-rpc-25-09-1 = { path = "../../outputs/generated/core-lightning-client-rpc-25-09-1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
transport = { package = "ethos-transport", version = "0.1.0", path = "../../primitives/transport" }
