[package]
name = "ethos-fuzz-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
ctor = "0.6.0"
ethos-adapters = { path = "../../../adapters" }
ethos-fuzz = { path = ".." }
ethos-analysis = { path = "../../analysis" }
fuzz-types = { package = "ethos-fuzz-types", path = "../../../primitives/fuzz" }
libfuzzer-sys = "0.4"
rand = "0.9.2"
rand_chacha = "0.9.0"
regex = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
thiserror = "2.0.17"
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros"] }
types = { package = "ethos-types", path = "../../../primitives/types" }

[[bin]]
name = "differential"
path = "fuzz_targets/differential.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rpc"
path = "fuzz_targets/rpc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "schema"
path = "fuzz_targets/schema.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transport"
path = "fuzz_targets/transport.rs"
test = false
doc = false
bench = false

[[bin]]
name = "unified"
path = "fuzz_targets/unified.rs"
test = false
doc = false
bench = false
